fixed scrollbar

--- a/ModernaMediaAngular/src/app/app.component.scss
+++ b/ModernaMediaAngular/src/app/app.component.scss
@@ -10,7 +10,7 @@
     width: 100%;
     display: flex;
     .right {
-        animation: background_in .2s forwards;
+        animation: background_in 1s forwards;
         width: 65%;
         height: 100%;
         background-image: url(../assets/Images/Landingpage/Bedrift_nettside@2x.jpg);
