--- a/ModernaMediaAngular/src/variables.scss
+++ b/ModernaMediaAngular/src/variables.scss
@@ -1,6 +1,9 @@
 $base-color: #c6538c;
 $header-height: 50px;
 
+$orange-gradient: #ff774d;
+$blue-gradient: #534dff;
+
 $blue:  #006994;
 $blue-primary:  #4D77FF;
 $blue-secondary:#275C88;
